--- a/app/src/main/res/drawable/discount_badge.xml
+++ b/app/src/main/res/drawable/discount_badge.xml
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="@color/orange_light" />
-    <corners android:radius="12dp" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Shadow -->
+    <item android:top="1dp" android:left="1dp" android:right="1dp" android:bottom="2dp">
+        <shape android:shape="rectangle">
+            <solid android:color="#20FF9800" />
+            <corners android:radius="14dp" />
+        </shape>
+    </item>
+    <!-- Badge -->
+    <item android:bottom="1dp">
+        <shape android:shape="rectangle">
+            <gradient
+                android:startColor="@color/orange_light"
+                android:endColor="#FFF8E1"
+                android:angle="45" />
+            <corners android:radius="14dp" />
+            <stroke
+                android:width="1dp"
+                android:color="@color/orange_primary" />
+        </shape>
+    </item>
+</layer-list>
