--- a/app/src/main/res/drawable/price_tag_background.xml
+++ b/app/src/main/res/drawable/price_tag_background.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/background_light" />
-    <corners android:radius="8dp" />
+    <gradient
+        android:startColor="@color/background_light"
+        android:endColor="#F8F8F8"
+        android:angle="90" />
+    <corners android:radius="10dp" />
     <stroke
         android:width="1dp"
         android:color="@color/divider" />
